# ibkr-spy-puts

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IBKRtest.txt.pgp  README.md  docker-compose.paper.yml  docker-compose.yml  learning.md  margin.20260121.csv  pgp_public_key.txt  plan.md  pyproject.toml  requirements.md  rsa_public_key.txt
.github/workflows/: deploy.yml
docker/: entrypoint.sh
docker/ibc/: config.ini
docs/: INVESTIGATION-2026-01-14-db-entry-discrepancy.md  PLAN-trade-history.md  PROGRESS-2026-01-14.md  PROGRESS-2026-01-15-EOD.md  PROGRESS-2026-01-15.md  ROADMAP.md
journal/: 2026-01-22.md  2026-01-23.md  2026-01-24.md  2026-01-25.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md
scripts/: capture_market_data.py  fix_missing_orders.py  manual_record_trade.py  preview_order.py  record_existing_order.py  run_paper_tests.sh  sunday_restart.sh  sync_from_ibkr.py  test_market_closed_data.py
sql/: schema.sql
src/ibkr_spy_puts/: __init__.py  api.py  config.py  connection_manager.py  database.py  ibkr_client.py  main.py  mock_client.py  monitor.py  scheduler.py  strategy.py
tests/: __init__.py  conftest.py  test_database.py  test_environment.py  test_tws_connection.py
tests/fixtures/: market_data.json  spy_expirations.json  spy_option_chain.json  spy_price.json
tests/integration/: test_conflict_handling.py
tests/scripts/: compare_margin_methods.py  create_test_position.py  test_conflict_scenario.py  test_snapshot.py  test_whatif_margin.py
(+7 files in other folders)
